# RPi-Facial-Recognition

./: .gitignore  README.md
cpp_version/: CMakeLists.txt  faceDetect.cpp  faceDetect.hpp  main.cpp  makefile  test_detect
python_version/: Facial Recognition.ipynb
